[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "turnaround"
version = "0.0.1"
description = "A project for Data Analysis about turnaround for airport and airlines operations"
authors = [
  { name = "Renan Amaral" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["turnaround"]
include = ["pyproject.toml", "turnaround/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["turnaround"]
force-sort-within-sections = true

